--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -255,6 +255,10 @@ footer {
   float:left; /* content will flow around this  */
 }
 
+.services .tile .leader {
+  width: auto;
+}
+
 /* home */
 .home .about .title {
   display:inline;
