--- a/public/responsive/wide.css
+++ b/public/responsive/wide.css
@@ -4,10 +4,36 @@
   margin-right:0.5%;
 
 }
+
 footer {
   margin-top:46px;
 }
 
+
+/* Services  */
+body.services section.main{
+  left: 2%;
+}
+
+section.main article.introduction em {
+  font-family: "Arial Narrow";
+  font-size: 25px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+section.main article.introduction p {
+  margin: 0;
+  font-size: 16px;
+}
+
+section.main article.introduction {
+  padding-left: 3%;
+  padding-top: 40px;
+}
+
+
+/* Home     */
 nav.cloud {
   position:absolute;
   right:0px;
