email info is a mailto:

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -69,7 +69,7 @@
             <article class='tile'>
             <ul>
               <li>
-              <span>E mail</span> info@blazingcloud.net
+              <span>E mail</span> <a href="mailto:info@blazingcloud.net">info@blazingcloud.net</a>
               </li>
               <li>
               <span>Phone</span> (415) 800-8085
