--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -12,6 +12,10 @@ a { color: rgb(226,143,86);}
 
 a:hover  { color: rgb(226,143,86); }
 
+.services a {
+ font-size: 16px;
+ text-decoration:none;
+}
 
 section.community a {
   font-size: inherit;
@@ -36,7 +40,7 @@ body footer > section {
 }
 
 body .main {
-  width:98%;
+  width:90%;
   margin: 0 auto;
   padding-left:1%;
   padding-right:1%;
@@ -134,6 +138,15 @@ audio, video {
   font-size:13px;
   line-height:1.5em;
 }
+
+section.main article.introduction em {
+  font-family: "Arial Narrow", Arial;
+  font-size: 25px;
+  font-weight: normal;
+  text-transform: uppercase;
+  line-height: 1.35;
+}
+
 
 .title {
   font-family: PTSansNarrowBold;
