--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -177,7 +177,7 @@ nav.cloud li {
 nav.cloud li a {
   display: block;
   width: inherit;
-  font-size:1.14em;
+  font-size: 14.5px;
   font-family: PTSansNarrowBold;
   text-decoration:none;
   text-transform:uppercase;
