Copyright show right information

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -80,7 +80,7 @@
             </ul>
             </article>
           </section>
-          <div class='copyright'>&copy; BlazingCloud - San Francisco, CA, USA</div>
+          <div class='copyright'>&copy; 2009-2012 Blazing Cloud, Inc.</div>
       </section>
     </footer>
   </body>
