--- a/public/responsive/wide/768px_to_1024px.css
+++ b/public/responsive/wide/768px_to_1024px.css
@@ -25,12 +25,6 @@ section.services article.tile p {
   background-position: 47.5% 0;
 }
 
-nav.cloud {
-  padding-right: 1%;
-  top: 0px;
-  width: 170px;
-}
-
 .branding .pitch {
   margin-top: 46px;
   padding-left: 4%;
@@ -85,6 +79,10 @@ nav.cloud {
 }
 
 @media screen and (max-width: 960px) {
+  nav.cloud ul {
+    width: 75%;
+  }
+  
   .branding .mobiles {
     background-size: contain;
   }
