--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -12,12 +12,12 @@ a { color: rgb(226,143,86);}
 
 a:hover  { color: rgb(226,143,86); }
 
-header .header-content {
+#header-wrapper .header {
   width: 100%;
   margin: 0 auto;
 }
 
-header .header-content a.logo-link {
+#header-wrapper .header a.logo {
   width: 70%;
   float: left;
   font-size: 16px;
@@ -45,7 +45,7 @@ section.community a {
  * their dimensions may be re-configured for a successive css media 
  *
  * */
-body header,
+body #header-wrapper,
 body footer > section {
   overflow: hidden;
   width:100%;
@@ -68,13 +68,11 @@ body .main {
  * the background image can be re-declared for a more specific
  * media in this manner for another device
  */
-.logo {
-  background-image:url('/images/logo/with-shadow.png');
-  background-repeat:no-repeat;
-  background-position:center center;
-  height:71px;
+a.logo {
+  overflow: hidden;
+  float: left;
   z-index:1000;
-  position:relative;
+  position:relative;  
 }
 
 .bottom-logo {
@@ -199,15 +197,6 @@ nav.cloud li a.active {
   color: rgb(124,63,9);
 }
 
-header .introduction {
-  clear:both;
-  margin-bottom:1em;
-  margin-left:1em;
-  margin-top:4em;
-  width:100%;
-  padding-bottom:1em;
-}
-
 .underline {
   clear:both;
   border:0;
@@ -218,6 +207,7 @@ header .introduction {
   position:relative;
   top:9px;
 }
+
 footer {
   color:rgb(250,250,250);
   font-weight:bold;
