--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -9,7 +9,7 @@
   <div class='mobiles'>
   </div>
 </div>
-
+<div class='content'>
   <section class='main grid'>
     <section class='about'>
     <article class='tile first'>
@@ -98,4 +98,5 @@
         </article>
         </section> <!-- community -->
       </section> <!-- main section -->
+</div>
       <div class='clear'></div>
