Logo image file changed

--- a/public/responsive/768px_or_wider.css
+++ b/public/responsive/768px_or_wider.css
@@ -52,7 +52,7 @@ section.services article.tile p {
 /* Home     */
 #header-wrapper .header a.logo div {
   height: 68px;
-  background-image: url('/images/logo/with-clouds.png');
+  background-image: url('/images/logo/with-cloud.png');
   background-position: 1.6% center;
   background-repeat: no-repeat;
 }
