--- a/public/responsive/768px_or_wider.css
+++ b/public/responsive/768px_or_wider.css
@@ -21,12 +21,15 @@ div#header-wrapper, div.content {
   margin: 0 auto;
 }
 
+.services #header-wrapper {
+  height: 80px;
+}
 
 .services #header-wrapper .header a.logo div {
-  height: 70px;
   background-image: url('/images/logo/with-shadow.png');
   background-position: 1.6% center;
   background-repeat: no-repeat;
+  text-decoration: none;
 }
 
 section.services article.tile {
@@ -56,7 +59,7 @@ section.services article.tile p {
 #header-wrapper .header a.logo div {
   height: 68px;
   background-image: url('/images/logo/with-cloud.png');
-  background-position: 1.6% center;
+  background-position: 13.6% center;
   background-repeat: no-repeat;
 }
 
@@ -85,15 +88,19 @@ nav.cloud li {
   
   .bottom article.tile li {
     display: inline;    
-  }  
+  }
+  
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 960px) {
+  #header-wrapper .header a.logo div {
+    background-position: 21.6%;
+  }
 }
 
 .header, .main, footer section{
   max-width: 1024px;
-  min-height: 73px;
+  min-height: 75px;
 }
 
 div.content {
@@ -113,11 +120,11 @@ footer {
 }
 
 .bottom-logo {
-  height:72px;
+  height:71px;
   width: 31.25%;
   float: left;
   background-image: url('/images/services/services_footer_logo.png');
-  background-position: 16% center;
+  background-position: 65% center;
 }
 
 .services .bottom-logo {
